--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Escape from</title>
 </head>
 <body>
+    <img class="imageIntro" src="images/intro.gif" alt="imageIntro" style="display:none"/>
     <script src="./src/enemy.js"></script>
     <script src="./src/timer.js"></script>
     <script src="./src/player.js"></script>
