--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <img class="imageIntro" src="images/intro.gif" alt="imageIntro" style="display:none"/>
+    <img class="gameOvergif" src="images/overAnimation.gif" alt="gameOvergif" style="display:none"/>
     <script src="./src/enemy.js"></script>
     <script src="./src/timer.js"></script>
     <script src="./src/player.js"></script>
